# Autonomous-Car-Control

./: LICENSE  README.md
Car-Control/: .gitignore
Car-Control/Car_Controll/: .cproject  .project  partitions.csv
Car-Control/Car_Controll/main/: CMakeLists.txt  I2C_devices.c  I2C_devices.h  MotorAndServoControl.c  MotorAndServoControl.h  MotorControl.c  MotorControl.h  MotorControl_mcpwm.c  MotorControl_mcpwm.h  Network.c  Network.h  PID.c  PID.h  Queue.c  Queue.h  RemoteWifiControl.c  RemoteWifiControl.h  ServoControl.c  ServoControl.h  UART_Jetson.c  UART_Jetson.h  main.c
Documentation/docbook/: _c_make_files_23_824_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.xml  _c_make_files_23_824_80_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.xml  _c_make_files_23_824_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.xml  _c_make_files_23_824_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.xml  _c_make_files_2_check_type_size_2_t_i_m_e___t___s_i_z_e_8c.xml  _c_make_files_2_check_type_size_2_t_i_m_e___t___s_i_z_e_8c__incl.dot  _c_make_files_2_check_type_size_2_t_i_m_e___t___s_i_z_e_8c_source.xml  _dc_motor_8c.xml  _dc_motor_8c__incl.dot  _dc_motor_8c_source.xml  _dc_motor_8h.xml  _dc_motor_8h__dep__incl.dot  _dc_motor_8h__incl.dot  _dc_motor_8h_source.xml  _i2_c__accelerometer_sensor_8c.xml  _i2_c__accelerometer_sensor_8c__incl.dot  _i2_c__accelerometer_sensor_8c_source.xml  _i2_c__accelerometer_sensor_8h.xml  _i2_c__accelerometer_sensor_8h__dep__incl.dot  _i2_c__accelerometer_sensor_8h__incl.dot  _i2_c__accelerometer_sensor_8h_source.xml  _i2_c__camera_sensor_8c.xml  _i2_c__camera_sensor_8c__incl.dot  _i2_c__camera_sensor_8c_source.xml  _i2_c__camera_sensor_8h.xml  _i2_c__camera_sensor_8h__dep__incl.dot  _i2_c__camera_sensor_8h__incl.dot  _i2_c__camera_sensor_8h_source.xml  _i2_c__common_8c.xml  _i2_c__common_8c__incl.dot  _i2_c__common_8c_source.xml  _i2_c__common_8h.xml  _i2_c__common_8h__dep__incl.dot  _i2_c__common_8h__incl.dot  _i2_c__common_8h_source.xml  _i2_c__distance_sensor_8c.xml  _i2_c__distance_sensor_8c__incl.dot  (+154 more)
HappySilicon/: build.gradle
(+637 files in other folders)
